--- a/src/components/Catalog/Main/Main.module.css
+++ b/src/components/Catalog/Main/Main.module.css
@@ -32,6 +32,13 @@
     font-size: 20px;
     line-height: 129.7%;
 }
+strong{
+    color: transparent;
+    -webkit-background-clip: text;
+    background-image: linear-gradient(109.36deg, #000000 0%, #282828 100%);
+    font-size: 20px;
+    line-height: 129.7%;
+}
 .btn{
     text-transform: uppercase;
     padding: 0 35px;
